fix for vertical scrollbar hidden under navbar

--- a/srv/resources/assets/style/local.less
+++ b/srv/resources/assets/style/local.less
@@ -10,7 +10,6 @@
    * */
   height: 100vh;
   padding-top: 40px;
-  overflow-x: hidden;
 }
 
 #top-level-modals {
